repaired overflowing eightsection (position absolute is shiiit)

--- a/css/style.css
+++ b/css/style.css
@@ -449,15 +449,24 @@ section.secondsection .secondcontainer h4{
   background-position: 50% 0%;
   position: relative;
   text-align: center;
-  padding-bottom: 50px;
+  padding-left: 30%;
+  padding-top: 18%;
 }
 
-.eighthsection .eighthtext{
-  position: absolute;
-  top: 75%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  margin-bottom: 50px;
+.eighthsection .eighthcontainer{
+  width: 600px;
+  padding-top: 10px;
+  padding-bottom: 20px;
+}
+
+.eighthsection .eighthcontainer:after{
+  content: "";
+  display: table;
+  clear: both;
+}
+.eighthsection .eightcontainer .eighthtext{
+  float: left;
+  display: block;
   width: 600px;
 }
 
@@ -489,7 +498,6 @@ section.secondsection .secondcontainer h4{
   padding-bottom: 15px;
   text-decoration: underline;
   text-transform: none;
-  margin-bottom: 50px;
 }
 /* /eighthsection */
 
@@ -537,9 +545,10 @@ section.secondsection .secondcontainer h4{
   height: 60vh;
   background-color: white;
   text-align: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .tenthsection .centertext h2{
-  padding-top: 100px;
   font-size: 30px;
 }
 .tenthsection .tenthcontainer{
